k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aurum-matrimony
  labels:
    name: aurum-matrimony
    environment: production
